[package]
name = "cherrry-markdown-client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.2", features = ["tray-icon"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
lazy_static = "1.4.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
